# nc_view_tui

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/cnc-gcode/: Cargo.toml
crates/cnc-gcode/src/: lib.rs  obj.rs
crates/cnc-gcode/tests/: export_obj.rs  parse_demo.rs
crates/cnc-gcode/tests/fixtures/: demo.nc
crates/cnc-geom/: Cargo.toml
crates/cnc-geom/src/: geom.rs  lib.rs  projection.rs
crates/cnc-tui/: Cargo.toml
crates/cnc-tui/src/: app.rs  config.rs  main.rs  render.rs
crates/cnc-tui/src/config/: animation.rs  keys.rs  mod.rs  parse.rs  parser.rs  projection.rs  theme.rs  ui.rs
examples/themes/: catppuccin.toml  gruvbox.toml
