[package]
name = "cnc-view-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
ratatui = "0.26"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
cnc-geom = { path = "../cnc-geom" }
cnc-gcode = { path = "../cnc-gcode" }
